fix profile page on alignment and shadow

--- a/style.css
+++ b/style.css
@@ -55,3 +55,97 @@ input.form-control:focus {
   box-shadow: none;
   border-bottom: 1px solid #000000;
 }
+
+
+/* 
+profile page */
+
+    /* tell the container's children to float left: */
+.float-my-children > * {
+    float:left;
+    margin-right:5px;
+}
+
+/* this is called a clearfix. it makes sure that the container's children floats are cleared, without using extra markup */
+
+.clearfix {
+    *zoom:1 /* for IE */
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/* end clearfix*/
+
+/* below is just to make things easier to see, not required */
+body > div {
+    
+    margin-bottom:10px;    
+}
+
+/* button */
+.button {
+  background-color: #c6d3c7a1;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  width: 25%;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: #dfdfdf41; 
+  color: black; 
+  box-shadow: 6px 8px 7px rgba(126, 126, 126, 0.144);
+
+}
+
+.button1:hover {
+  background-color: #c2c7c236;
+  color: black;
+}
+
+/* log out button */
+.buttonn {
+  display: inline-block;
+  padding: 16px 32px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: rgb(0, 0, 0);
+  background-color: #dfdfdf41; 
+  border: none;
+  border-radius: 15px;
+  box-shadow: 2px 5px #f1f1f154;
+  width: 25%;
+}
+
+  
+.buttonn:hover {background-color: #c2c7c236}
+
+.buttonn:active {
+  background-color: #dfdfdf41; 
+  box-shadow: 2px 5px #f1f1f154;
+  transform: translateY(4px);
+}
+
+@media all and (max-width: 800px) {
+  .button1 {
+    width:70%;
+  }
+}
